# CayenneLPP_MemOptimized

./: CMakeLists.txt  Doxyfile  README.md  library.json  library.properties  mkdocs.yml
.github/workflows/: mkdocs.yml  unit_test.yml
docs/: IOT_LAB.code-workspace  api.md  design_choices.md  examples.md  getting_started.md  index.md
examples/: CayenneLPP.ino
examples/Accelero_monitor/: Accelero_monitor.ino
examples/Basic_usage/: Basic_usage.ino
examples/Temperature_monitoring/: Temperature_monitoring.ino
examples/eight_switches_ttn/: eight_switches_ttn.ino
js/: package.json
js/src/: CayenneLPP_decoder.js
src/: CayenneLPP.cpp  CayenneLPP.h  CayenneLPP.hpp  CayenneTypes.hpp
tests/: CMakeLists.txt
tests/src/: test_helpers.cpp  test_memorysize.cpp
